Feature: Scores Table added, Imroved File Structrue